--- a/Jellyfin.Plugin.Seasonals/Web/easter.css
+++ b/Jellyfin.Plugin.Seasonals/Web/easter.css
@@ -30,7 +30,9 @@
 .easter {
     position: fixed;
     z-index: 15;
-    top: -10%;
+    top: 0;
+    will-change: transform;
+    transform: translate3d(var(--easter-sway-x, 0), var(--easter-fall-y, -10vh), 0);
     font-size: 1em;
     color: #fff;
     font-family: Arial, sans-serif;
@@ -54,11 +56,11 @@
 
 @-webkit-keyframes easter-fall {
     0% {
-        top: -10%;
+        --easter-fall-y: -10vh;
     }
 
     100% {
-        top: 100%;
+        --easter-fall-y: 100vh;
     }
 }
 
@@ -66,23 +68,21 @@
 
     0%,
     100% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
+        --easter-sway-x: 0px;
     }
 
     50% {
-        -webkit-transform: translateX(80px);
-        transform: translateX(80px);
+        --easter-sway-x: 80px;
     }
 }
 
 @keyframes easter-fall {
     0% {
-        top: -10%;
+        --easter-fall-y: -10vh;
     }
 
     100% {
-        top: 100%;
+        --easter-fall-y: 100vh;
     }
 }
 
@@ -90,11 +90,11 @@
 
     0%,
     100% {
-        transform: translateX(0);
+        --easter-sway-x: 0px;
     }
 
     50% {
-        transform: translateX(80px);
+        --easter-sway-x: 80px;
     }
 }
 
