--- a/Jellyfin.Plugin.Seasonals/Web/christmas.css
+++ b/Jellyfin.Plugin.Seasonals/Web/christmas.css
@@ -13,7 +13,9 @@
 .christmas {
   position: fixed;
   z-index: 15;
-  top: -10%;
+  top: 0;
+  will-change: transform;
+  transform: translate3d(var(--christmas-sway-x, 0), var(--christmas-fall-y, -10vh), 0);
   font-size: 1em;
   color: #fff;
   font-family: Arial, sans-serif;
@@ -32,49 +34,47 @@
 }
 
 @-webkit-keyframes christmas-fall {
-  0% {
-    top: -10%;
-  }
+    0% {
+        --christmas-fall-y: -10vh;
+    }
 
-  100% {
-    top: 100%;
-  }
+    100% {
+        --christmas-fall-y: 100vh;
+    }
 }
 
 @-webkit-keyframes christmas-shake {
 
-  0%,
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
+    0%,
+    100% {
+        --christmas-sway-x: 0px;
+    }
 
-  50% {
-    -webkit-transform: translateX(80px);
-    transform: translateX(80px);
-  }
+    50% {
+        --christmas-sway-x: 80px;
+    }
 }
 
 @keyframes christmas-fall {
-  0% {
-    top: -10%;
-  }
+    0% {
+        --christmas-fall-y: -10vh;
+    }
 
-  100% {
-    top: 100%;
-  }
+    100% {
+        --christmas-fall-y: 100vh;
+    }
 }
 
 @keyframes christmas-shake {
 
-  0%,
-  100% {
-    transform: translateX(0);
-  }
+    0%,
+    100% {
+        --christmas-sway-x: 0px;
+    }
 
-  50% {
-    transform: translateX(80px);
-  }
+    50% {
+        --christmas-sway-x: 80px;
+    }
 }
 
 .christmas:nth-of-type(0) {
